--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.4|^8.0",
         "ext-json": "*",
         "dotlines-io/ghoori": "^1.0"
     },
