--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
-        "dotlines-io/ghoori": "^1.0"
+        "dotlines-io/ghoori": "~1.0.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
