--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
-        "dotlines-io/ghoori": "~1.0.5"
+        "dotlines-io/ghoori": "~1.0.5",
+        "nesbot/carbon": "^2.48"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
