--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
         "nesbot/carbon": "^2.48"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^9.5",
-        "vimeo/psalm": "^4.3"
+        "roave/security-advisories": "dev-latest",
+        "vimeo/psalm": "^4.3",
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload": {
         "psr-4": {
