updates env_sample file

--- a/.ENV_SAMPLE
+++ b/.ENV_SAMPLE
@@ -1,4 +1,4 @@
-GHOORI_SERVER_URL=https://sb-payments.ghoori.com.bd/oauth/token
+GHOORI_SERVER_URL=https://sb-payments.ghoori.com.bd
 GHOORI_USERNAME=
 GHOORI_PASSWORD=
 GHOORI_CLIENT_ID=
